--- a/TimeTracker/TimeTracker/TimeTracker.csproj
+++ b/TimeTracker/TimeTracker/TimeTracker.csproj
@@ -48,6 +48,12 @@
   <ItemGroup>
     <Compile Include="Classes\LoadProcesses.cs" />
     <Compile Include="Classes\TTimer.cs" />
+    <Compile Include="MainPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainPage.Designer.cs">
+      <DependentUpon>MainPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProcessList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -56,6 +62,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="MainPage.resx">
+      <DependentUpon>MainPage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ProcessList.resx">
       <DependentUpon>ProcessList.cs</DependentUpon>
     </EmbeddedResource>
